Minor UI fixes on mobile devices

--- a/Francis/ClientApp/src/app/app.component.scss
+++ b/Francis/ClientApp/src/app/app.component.scss
@@ -53,7 +53,8 @@
   }
 
   .mat-sidenav-container {
-    height: 100%;
+    min-height: 100vh;
+    background-color: lightskyblue;
 
     .mat-sidenav-content {
       background-color: lightskyblue;
